--- a/readme
+++ b/readme
@@ -1,1 +1,259 @@
 anyway
+// 第一步 建表
+DROP TABLE IF EXISTS `ip_standard` ;
+
+CREATE TABLE `ip_standard` (
+  `ip_start` DECIMAL (10, 0) NOT NULL,
+  `ip_end` DECIMAL (10, 0) NOT NULL,
+  `country` VARCHAR (50) DEFAULT NULL,
+  `province` VARCHAR (50) DEFAULT NULL,
+  `city` VARCHAR (50) DEFAULT NULL,
+  `town` VARCHAR (50) DEFAULT NULL,
+  `address` VARCHAR (100) DEFAULT NULL,
+  `operator` VARCHAR (20) DEFAULT NULL,
+  `city_cn` VARCHAR (30) DEFAULT NULL,
+  `province_cn` VARCHAR (30) DEFAULT NULL,
+  PRIMARY KEY (`ip_start`, `ip_end`)
+) ENGINE = MYISAM DEFAULT CHARSET = utf8 ;
+
+/*Table structure for table `geoblocks` */
+DROP TABLE IF EXISTS `geoblocks` ;
+
+CREATE TABLE `geoblocks` (
+  `startIpNum` DECIMAL (10, 0) DEFAULT NULL,
+  `endIpNum` DECIMAL (10, 0) DEFAULT NULL,
+  `locId` INT (11) DEFAULT NULL,
+  `sidx` DECIMAL (20, 0) DEFAULT NULL,
+  `eidx` DECIMAL (20, 0) DEFAULT NULL,
+  UNIQUE KEY `startIpNum` (`startIpNum`),
+  UNIQUE KEY `endIpNum` (`endIpNum`),
+  KEY `geoidx` (`sidx`)
+) ENGINE = MYISAM DEFAULT CHARSET = utf8 ;
+
+/*Table structure for table `geolocation` */
+DROP TABLE IF EXISTS `geolocation` ;
+
+CREATE TABLE `geolocation` (
+  `locId` INT (11) NOT NULL,
+  `country` TEXT,
+  `province` TEXT,
+  `city` TEXT,
+  `town` TEXT,
+  `address` TEXT,
+  `operator` TEXT,
+  PRIMARY KEY (`locId`)
+) ENGINE = MYISAM DEFAULT CHARSET = utf8 ;
+
+
+
+
+// 第二步执行 launch worker
+
+// 第三步 执行
+ INSERT INTO geolocation (
+  country,
+  province,
+  city,
+  town,
+  address,
+  operator,
+  locId
+) 
+SELECT 
+  country,
+  province,
+  city,
+  town,
+  address,
+  operator,
+  @rownum := @rownum + 1 AS rownum 
+FROM
+  (SELECT 
+    @rownum := 0) r,
+  (SELECT 
+    country,
+    province,
+    city,
+    town,
+    address,
+    operator 
+  FROM
+    ip_standard 
+  GROUP BY country,
+    province,
+    city,
+    town,
+    address,
+    operator) a ;
+
+// 第四步 修改 geoblocks locId text
+
+// 第五步 执行
+INSERT INTO geoblocks (
+  startIpNum,
+  endIpNum,
+  sidx,
+  eidx,
+  locId
+) 
+SELECT 
+  ip_start,
+  ip_end,
+  (ip_start - (ip_start % 65536)) AS s,
+  (ip_end - (ip_end % 65536)) AS e,
+  CONCAT(
+    country,
+    province,
+    city,
+    town,
+    address,
+    operator
+  ) AS ro 
+FROM
+  ip_standard 
+ORDER BY ip_start ;
+
+// 第六步 执行
+UPDATE 
+  geoblocks t 
+SET
+  t.locId = 
+  (SELECT 
+    locId 
+  FROM
+    geolocation 
+  WHERE CONCAT(
+      country,
+      province,
+      city,
+      town,
+      address,
+      operator
+    ) = t.locId) ;
+
+// 第七步 修改 geoblocks locId int 11位
+
+// 第八步 
+UPDATE 
+  geoblocks t 
+SET
+  t.`sidx` = '16777215' 
+WHERE t.`sidx` != t.`eidx` ;
+
+/*
+ * 检测sql
+ */
+  SELECT 
+  g.*,
+  i.ip_start 
+FROM
+  geoblocks g,
+  ip_standard i 
+WHERE g.locId = CONCAT(
+    i.country,
+    i.province,
+    i.city,
+    i.town,
+    i.address,
+    i.operator
+  ) ;
+
+SELECT 
+  a.locId,
+  b.locId 
+FROM
+  geoblocks a 
+  LEFT JOIN geolocation b 
+    ON (
+      a.locId = CONCAT(
+        b.country,
+        b.province,
+        b.city,
+        b.town,
+        b.address,
+        b.operator
+      )
+    ) ;
+  
+  
+SELECT 
+  * 
+FROM
+  (SELECT 
+    t.`sidx`,
+    COUNT(1) AS ct 
+  FROM
+    geoblocks t 
+  WHERE t.`sidx` = t.`eidx` 
+  GROUP BY t.`sidx`) a 
+ORDER BY a.sidx ASC ;
+
+# max
+4294901760 min16777216 
+SELECT 
+  * 
+FROM
+  (SELECT 
+    t.`sidx`,
+    COUNT(1) AS ct 
+  FROM
+    geoblocks t 
+  WHERE t.`sidx` != t.`eidx` 
+  GROUP BY t.`sidx`) a 
+ORDER BY a.sidx DESC ;
+
+#max 4026531840 min 17170432 select count(1) from geoblocks t
+WHERE t.`sidx` = t.`eidx` ;
+#154693 SELECT COUNT(1) FROM geoblocks t WHERE
+t.`sidx` != t.`eidx` ;
+#4997 
+
+
+
+SELECT 
+  t.`startIpNum`,
+  g.`country`,
+  g.`province`,
+  g.`city`,
+  g.`operator` 
+FROM
+  geoblocks t,
+  geolocation g 
+WHERE t.`locId` = g.`locId` ;
+
+SELECT 
+  i.`ip_start`,
+  i.`country`,
+  i.`province`,
+  i.`city`,
+  i.`operator` 
+FROM
+  ip_standard i ;
+
+SELECT 
+  COUNT(1) 
+FROM
+  ip_standard ;
+
+#161284
+SELECT 
+  COUNT(1) 
+FROM
+  (SELECT 
+    t.`startIpNum`,
+    t.`endIpNum`,
+    g.`country`,
+    g.`province`,
+    g.`city`,
+    g.`operator` 
+  FROM
+    geoblocks t,
+    geolocation g 
+  WHERE t.`locId` = g.`locId`) a,
+  ip_standard i 
+WHERE a.startIpNum = i.`ip_start` 
+  AND a.endIpNum = i.`ip_end` 
+  AND a.country = i.`country` 
+  AND a.province = i.`province` 
+  AND a.city = i.`city` 
+  AND a.operator = i.`operator`;
